--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
   <title>Snake</title>
   <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-  <h1>Snake</h1>
-</body>
+  <body>
+    <h1>Snake</h1>
+    <div class="container">
+      <div class="block block-1">
+        <span class="text">1</span>
+      </div>
+      <div class="block block-2">
+        <span class="text">2</span>
+      </div>
+      <div class="block block-3">
+        <span class="text">3</span>
+      </div>
+      <div class="block block-4">
+        <span class="text">4</span>
+      </div>
+      <div class="block block-5">
+        <span class="text">5</span>
+      </div>
+      <div class="block block-6">
+        <span class="text">6</span>
+      </div>
+    </div>
+  </body>
 </html>
